# ocu-sdk-test

./: .gitignore  CMakeLists.txt  LICENSE.txt  QUICKSTART.md  README.md  SECURITY_BEST_PRACTICES.md  THIRD_PARTY_NOTICES.txt  inject_config.py  test.cfg.example
example/: AuthServer.h  QrGenerator.h  Routes.hpp  login.h  main_with_sdk.cpp  whitelist.h
include/: CoreSDK.h
